--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </ul>
       </header>
     </div>
-  </section>
-  <section>
+  
     <div class="container my-5">
       <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -153,14 +152,14 @@
         </div>
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url(');">
+            style="background-image: url();">
             <img class="hailey" src="./Resource/_MG_9545.png" >
             
           </div>
         </div>
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url('unsplash-photo-3.jpg');">
+            style="background-image: url();">
             <img src="./Resource/_MG_9334.png">
           </div>
         </div>
