--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
             style="background-image: url();">
-            <img class="hailey" src="./Resource/_MG_9545.png" >
+            <img class="hailey" src="./Resource/kkkk.jpg" >
             
           </div>
         </div>
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
             style="background-image: url();">
-            <img src="./Resource/_MG_9334.png">
+            <img src="./Resource/duy.jpg">
           </div>
         </div>
       </div>
