--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <section>
     <div class="container px-4 py-5" id="custom-cards">
-      <h2 class="pb-2 border-bottom">Custom cards</h2>
+      <h2 class="pb-2 border-bottom">Preview Photos</h2>
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
