--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Web</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Photos</a></li>
+          <li class="nav-item"><a href="./Photos.html" class="nav-link">Photos</a></li>
           <li class="nav-item"><a href="#" class="nav-link">Impressum</a></li>
         </ul>
       </header>
