--- a/Photos.html
+++ b/Photos.html
@@ -133,6 +133,37 @@
     </div>
   </section>
 
+  <section class="Footer">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" aria-label="Bootstrap">
+          <svg class="bi" width="30" height="24" aria-hidden="true">
+
+          </svg>
+        </a>
+        <span class="footerss mb-3 mb-md-0 text-body-secondary" color="white">
+          <p>©Nikolas Dang</p>
+        </span>
+      </div>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+          <a class="text-body-secondary" href="https://github.com/Niixed" aria-label="Instagram"><svg class="bi"
+              width="24" height="24" aria-hidden="true">
+              <img src="./Resource/github-color-svgrepo-com.svg" height="30px">
+            </svg>
+          </a>
+        </li>
+        <li class="ms-3">
+          <a class="instagram text-body-secondary" href="https://www.instagram.com/niixed/" aria-label="Facebook">
+            <svg class="bi" width="24" height="24">
+              <img src="./Resource/instagram-1-svgrepo-com.svg" height="30px">
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </section>
+
 </body>
 
 </html>
