--- a/Photos.html
+++ b/Photos.html
@@ -31,7 +31,7 @@
 
     <section>
     <div class="container px-4" id="custom-cards">
-
+        <h2 class="pb-2 border-bottom">Portraits</h2>
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -57,7 +57,7 @@
   </section>
   <section>
     <div class="container px-4" id="custom-cards">
-    
+        <h2 class="pb-2 border-bottom">Weddings</h2>
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -83,6 +83,7 @@
   </section>
   <section>
     <div class="container px-4" id="custom-cards">
+        <h2 class="pb-2 border-bottom">Childrens</h2>
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
