Photos filled fix

--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@
       <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url();">
-            <img src="./Resource/IMG_6052.jpg">
+            style="background-image:url(./Resource/IMG_6052.jpg)">
+            <img src="./Resource/IMG_6052.jpg" class="h-100">
           </div>
         </div>
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url();">
-            <img class="hailey" src="./Resource/kkkk.jpg" >
+          <div class="card card-cover  h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+            style="background-image:none url();">
+            <img class="h100" src="./Resource/kkkk.jpg" >
             
           </div>
         </div>
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-            style="background-image: url();">
-            <img src="./Resource/duy.jpg">
+            style="background-image: url(;">
+            <img class="h-100" src="./Resource/duy.jpg" >
           </div>
         </div>
       </div>
