--- a/Photos.html
+++ b/Photos.html
@@ -22,8 +22,8 @@
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Web</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">Photos</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Impressum</a></li>
+                    <li class="nav-item"><a href="./Photos.html" class="nav-link active">Photos</a></li>
+                    <li class="nav-item"><a href="./Impressum.html" class="nav-link">Impressum</a></li>
                 </ul>
             </header>
         </div>
