--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Web</a></li>
+          <li class="nav-item"><a href="#" class="nav-link disabled">Web</a></li>
           <li class="nav-item"><a href="./Photos.html" class="nav-link">Photos</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Impressum</a></li>
+          <li class="nav-item"><a href="./Impressum.html" class="nav-link">Impressum</a></li>
         </ul>
       </header>
     </div>
