--- a/Impressum.html
+++ b/Impressum.html
@@ -28,8 +28,8 @@
     </div>
 
 
-<div class="px-5 py-5 mx-5 my-5">
-  <h1>Impressum</h1>
+<div class=" border-bottom px-5 py-5 mx-5 my-5">
+  <h1 class="border-bottom py-2">Impressum</h1>
   <br>
   <h2 class="lead fw-bold">Nikolas Dang </h2>
 
