--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </a>
         </li>
         <li class="ms-3">
-          <a class="instagram text-body-secondary" href="https://www.instagram.com/niixed/" aria-label="Facebook">
+          <a class="instagram text-body-secondary" href="https://www.instagram.com/nxd98x/" aria-label="Facebook">
             <svg class="bi" width="24" height="24">
               <img src="./Resource/instagram-1-svgrepo-com.svg" height="30px">
             </svg>
